--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <div class="flex flex-col md:flex-row gap-8 w-full">
                         <div class="flex-1 p-4 rounded-xl border-2 border-[#ff764a] transform transition-transform hover:scale-105">
                             <h3 class="text-xl font-bold text-[#ff764a] mb-2">Core Messaging</h3>
-                            <p class="text-lg">**Your Legal CRM for Entity Management.** We will pivot from a generic "all-in-one" solution to a specific identity that resonates with legal and finance professionals.</p>
+                            <p class="text-lg">"Your Legal CRM for Entity Management." We will pivot from a generic "all-in-one" solution to a specific identity that resonates with legal and finance professionals.</p>
                         </div>
                         <div class="flex-1 space-y-4">
                             <div class="p-4 rounded-xl border-2 border-[#ef5675] transform transition-transform hover:scale-105">
